# jarvis

./: .gitignore  README.md
assistmint/: pyproject.toml
assistmint/assistmint/: __init__.py  calendar_manager.py  config_intents.py
assistmint/assistmint/core/: __init__.py  actions.py  constants.py  logger.py
assistmint/assistmint/core/audio/: __init__.py  device.py  stt.py  tts.py  wake.py
assistmint/assistmint/core/models/: __init__.py  manager.py
assistmint/assistmint/core/modules/: __init__.py  base.py  loader.py
assistmint/assistmint/core/nlp/: __init__.py  corrections.py  filters.py  router.py
assistmint/assistmint/core/resources/: __init__.py  manager.py
jarvis1/: colors.py  config.py  corrections.py  main.py  ollama.py  requirements.txt  speech_recognition.py  start.sh  text_to_speech.py  voice2json_intent.py  wake_word.py
jarvis2/: .gitignore  README_COMMANDMODE.md  config.py  main.py  requirements.txt  start.sh  start_assistant.sh
jarvis2/modules/: __init__.py
jarvis2/modules/calendar/: __init__.py  module.py
jarvis2/modules/chat/: __init__.py  module.py
jarvis2/modules/coding/: __init__.py  module.py
jarvis2/modules/dictation/: __init__.py  grammar.py  module.py
jarvis2/modules/project/: __init__.py  module.py
jarvis2/modules/terminal/: __init__.py  module.py
